# map-diary

./: .gitignore  CLAUDE.md  LICENSE  package-lock.json
backend/: .gitignore  CLAUDE.md  pyproject.toml
backend/app/: config.py  main.py
backend/tests/: test_health.py
datas/: dummy.json
docs/: Map_Visual_Spec_v0.1.md  PRD_v1.md
docs/superpowers/plans/: 2026-06-11-globe-visual-enhancement.md  2026-06-11-initial-project-setup.md  2026-06-11-phase1-mock-data.md  2026-06-11-phase2-globe-poc.md  2026-06-11-phase3-map2d-poc.md
docs/superpowers/specs/: 2026-06-11-globe-visual-enhancement-design.md  2026-06-11-phase1-mock-data-design.md  2026-06-11-phase2-globe-poc-design.md  2026-06-11-phase3-map2d-poc-design.md  2026-06-12-phase4-main-screen-design.md
frontend/: .prettierrc  CLAUDE.md  next.config.ts  package-lock.json  package.json
frontend/public/: cities.json  mock-data.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/diary/: all-diaries-modal.tsx  city-combobox.tsx  city-diary-modal.tsx  diary-form-modal.tsx  group-editor.tsx  group-manage-modal.tsx
frontend/src/components/ui/: input.tsx  (+4 more)
frontend/src/hooks/: use-diary-data.ts  use-diary-mutations.ts  use-media-query.ts
frontend/src/lib/: api.ts  cities.ts  diary-repo.ts  diary-schema.ts  geo.ts  home.ts  land-texture.ts  land.ts  transforms.ts
frontend/src/providers/: query-provider.tsx
frontend/src/stores/: ui-store.ts
frontend/src/types/: index.ts
frontend/tests/lib/: cities.test.ts  diary-repo.test.ts  diary-schema.test.ts  geo.test.ts  transforms.test.ts
(+16 files in other folders)
